# solage

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: deploy.yml
solage_core/: Cargo.toml
solage_core/src/: auth.rs  lib.rs
solage_data/: Cargo.toml
solage_data/src/: lib.rs  solage.code-workspace
solage_desktop/: Cargo.toml
solage_desktop/src/: main.rs
solage_mobile/: Cargo.toml
solage_mobile/src/: lib.rs
solage_ui/: Cargo.toml
solage_ui/src/: lib.rs  viewer_3d.rs
solage_web/: Cargo.toml  Trunk.toml  config.yaml  index.html
solage_web/src/: lib.rs  main.rs
