[workspace]
resolver = "2"
members = [
    "solage_data",
    "solage_core",
    "solage_ui",
    "solage_desktop",
    "solage_mobile",
    "solage_web",
]

[workspace.dependencies]
# Crates internes
solage_data = { path = "./solage_data" }
solage_core = { path = "./solage_core" }
solage_ui   = { path = "./solage_ui" }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Sérialisation
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
serde_yml   = "0.0.12"          # ← Remplace serde_yaml déprécié

# UI
egui        = "0.33"
egui_extras = { version = "0.33"}
egui-file-dialog = "0.12"
eframe      = { version = "0.33" }
ehttp       = "0.6"
jni         = "0.21"   
ndk-context = "0.1"

# Scripting
rhai        = "1.24"

# Utilitaires
anyhow      = "1.0"
log         = "0.4"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true