[package]
name = "solage_core"
version = "0.1.0"
edition = "2024"

[dependencies]
solage_data = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
rhai = { workspace = true } # Pour remplacer les "py:" strings

# Dépendances exclusives à la version Web
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
