[package]
name = "solage_desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
solage_data = { workspace = true }
solage_core = { workspace = true }
solage_ui = { workspace = true }
image = { version = "0.24", features = ["jpeg", "png"] }
egui_extras = { version = "0.33", features = ["all_loaders"] } # Pour le TableBuilder (votre TreeView)
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
env_logger = "0.11"
log = "0.4"
rfd = "0.14"
dirs = "5.0"