[package]
name = "solage_desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solage"
path = "src/main.rs"

[dependencies]
solage_core = { workspace = true }
solage_ui   = { workspace = true }
eframe      = { workspace = true }
egui        = { workspace = true }
log         = { workspace = true }
env_logger  = "0.11"
rfd         = "0.15"
dirs        = "5.0"
