[package]
name = "solage_mobile"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
solage_core    = { workspace = true }
solage_ui      = { workspace = true }
eframe         = { workspace = true }
log            = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger   = "0.14"

