[package]
name = "solage_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
solage_data = { workspace = true }
solage_core = { workspace = true }
serde_json  = { workspace = true }
egui        = { workspace = true }
egui_extras = { workspace = true }
eframe      = { workspace = true }
ehttp       = { workspace = true }
log         = { workspace = true }
