[package]
name                = "solage_ui"
version             = "0.1.0"
edition             = "2021"

[dependencies]
solage_data         = { workspace = true }
solage_core         = { workspace = true }
serde_json          = { workspace = true }
egui                = { workspace = true }
egui_extras         = { workspace = true }
egui-file-dialog    = { workspace = true }
eframe              = { workspace = true }
ehttp               = { workspace = true }
log                 = { workspace = true }
jni                 = { workspace = true }
ndk-context         = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rfd                 = "0.17.2"
wasm-bindgen-futures = "0.4"
