# solage_web/Cargo.toml

[package]
name = "solage_web"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
solage_core  = { workspace = true }
solage_ui    = { workspace = true }
eframe       = { workspace = true }
log          = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures      = "0.4"
console_error_panic_hook  = "0.1"
getrandom = { workspace = true }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
